# sesac-powerup-server

./: .gitignore  CMakeLists.txt
Common/: CMakeLists.txt  Powerup.PIDL  Powerup_common.cpp  Powerup_common.h  Powerup_marshaler.cpp  Powerup_proxy.cpp  Powerup_proxy.h  Powerup_stub.cpp  Powerup_stub.h  Vars.cpp  Vars.h
Common/Scripts/: Powerup_proxy.cs  Powerup_stub.cs
Server/: CMakeLists.txt  Server.cpp  Server.h  stdafx.h
Server/Manage/: MatchMaker.cpp  MatchMaker.h  Room.cpp  Room.h
Server/Patterns/: Singleton.cpp  Singleton.h
TestClient/: CMakeLists.txt  Client.cpp
